panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__functions__inline__test_error_inline_function_contains_definition_of_static_object.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/functions/inline/test_error_inline_function_contains_definition_of_static_object.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/inline/test_error_inline_function_contains_definition_of_static_object.c"
   (function-definition
      g~2 `fn() -> typeof((compound-literal
   (declaration compound_literal.0~1 `int`
      (braced
         0))))`
      (compound-statement
         (return 0))))

----- stderr -----
