panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__functions__inline__test_non_inline_declaration_provides_external_definition_2.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition_2/f.c
    - panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition_2/main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition_2/f.c"
   (declaration f~0 `fn() -> int` ∅)
   (function-definition
      f~0 `fn() -> int`
      (compound-statement
         (return 42))))
(translation-unit "panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition_2/main.c"
   (declaration f~0 `fn() -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (return (call (name f~0 `fn() -> int`))))))

----- stderr -----
